<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    android:orientation="vertical"
    tools:context=".UpdateEmployeeActivity">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_employee_name" />

    <EditText
        android:id="@+id/et_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        android:inputType="phone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_update" />

        <Button
            android:layout_marginStart="@dimen/common_horizontal_margin"
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete" />
    </LinearLayout>
</LinearLayout>