<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_employee_name"
        />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/et_email_id"
        android:hint="@string/hint_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="phone"
        android:id="@+id/et_phone"
        android:hint="@string/hint_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_add_emp"
        android:text="@string/btn_add_emp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_show_employees"
        android:text="@string/btn_show_employees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>